add updated index.html file

--- a/index.html
+++ b/index.html
@@ -4,39 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phase 1 Array Map Method Lab</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Phase 1 Array Map Method Lab</h1>
-    <p>By Samuel Emanman</p>
-  </header>
+  <h1>Array Map Method Lab</h1>
 
-  <main>
-    <section>
-      <h2>Original Tutorial Titles</h2>
-      <ul id="original-tutorials"></ul>
-    </section>
+  <section>
+    <h2>Original Tutorials</h2>
+    <ul id="original-tutorials"></ul>
+  </section>
 
-    <section>
-      <h2>Title-Cased Tutorial Titles</h2>
-      <ul id="titlecased-tutorials"></ul>
-    </section>
+  <section>
+    <h2>Title-Cased Tutorials</h2>
+    <ul id="titlecased-tutorials"></ul>
+  </section>
 
-    <section>
-      <h2>Robots Before Activation</h2>
-      <pre id="original-robots"></pre>
-    </section>
-
-    <section>
-      <h2>Robots After Activation</h2>
-      <pre id="activated-robots"></pre>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 Samuel Emanman | Phase 1 Lab
-  </footer>
+  <section>
+    <h2>Robots</h2>
+    <pre id="original-robots"></pre>
+    <pre id="activated-robots"></pre>
+  </section>
 
   <script src="index.js"></script>
 </body>
